test/asm/charsize.err
error: CHARSIZE: No character mapping for ""
    at charsize.asm(17)
error: CHARSIZE: No character mapping for "hello world"
    at charsize.asm(18)
error: CHARSIZE: No character mapping for "abcdef"
    at charsize.asm(19)
error: CHARSIZE: No character mapping for "é"
    at charsize.asm(20)
Assembly aborted with 4 errors!
